--- a/projeto-spotify/css/estilo.css
+++ b/projeto-spotify/css/estilo.css
@@ -73,6 +73,10 @@ nav.navbar-transparente{
 	color: black;
 }
 
+.carousel-control-next, .carousel-control-prev{
+	width: 5%;
+}
+
 /*Estrutura de conteúdos*/
 
 /*Classe caixa usada para colocar um espaçamento padrão no site*/
